[gd_scene load_steps=11 format=3 uid="uid://yfpyfv6boyao"]

[ext_resource type="PackedScene" uid="uid://d3nsak46hbo2c" path="res://game/events/common/event.tscn" id="1_5uf7s"]
[ext_resource type="Script" uid="uid://btgre7bv1b6d3" path="res://game/events/royale/royale.gd" id="2_d2r5a"]
[ext_resource type="Script" uid="uid://x5ehyotfquq8" path="res://game/events/royale/royale_ui.gd" id="6_q5vxn"]
[ext_resource type="Texture2D" uid="uid://c1rotus1aunmr" path="res://menu/theme/icons/left.png" id="7_oyafe"]
[ext_resource type="Texture2D" uid="uid://ix82y4qydhql" path="res://menu/theme/icons/right.png" id="8_ub7jk"]

[sub_resource type="ViewportTexture" id="ViewportTexture_0ce5t"]
viewport_path = NodePath("UI/MinimapViewport")

[sub_resource type="Animation" id="Animation_ty3n7"]
resource_name = "Defeat"
length = 2.00001
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1, 1.2, 1.4, 1.6, 2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(1e-05, 1e-05), Vector2(1.5, 1.5), Vector2(1, 1), Vector2(1.1, 1.1), Vector2(1, 1), Vector2(1.05, 1.05), Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:theme_override_colors/font_color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 0, 0, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:self_modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_ki4so"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1e-05, 1e-05)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 0, 0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:theme_override_colors/font_color")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 0, 0, 1)]
}

[sub_resource type="Animation" id="Animation_knbec"]
resource_name = "Victory"
length = 7.0
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1, 4.5, 6.5),
"transitions": PackedFloat32Array(2, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(2, 1),
"update": 0,
"values": [Vector2(2, 2), Vector2(1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:theme_override_colors/font_color")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 0, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_n8n4b"]
_data = {
&"Defeat": SubResource("Animation_ty3n7"),
&"RESET": SubResource("Animation_ki4so"),
&"Victory": SubResource("Animation_knbec")
}

[node name="Event" instance=ExtResource("1_5uf7s")]
script = ExtResource("2_d2r5a")
heal_box_spawn_interval_base = 10.0
heal_box_spawn_interval_per_player = 1.0
ammo_box_spawn_interval_base = 15.0
ammo_box_spawn_interval_per_player = 1.5
spawn_point_randomness = 0.0
metadata/_edit_horizontal_guides_ = []

[node name="OtherSpawner" parent="." index="6"]
_spawnable_scenes = PackedStringArray("uid://bysyaaj2r7stt", "uid://bdtqr6mv231py")

[node name="HealBoxSpawnTimer" type="Timer" parent="." index="7"]
wait_time = 15.0
one_shot = true

[node name="AmmoBoxSpawnTimer" type="Timer" parent="." index="8"]
wait_time = 15.0
one_shot = true

[node name="UI" parent="." index="10"]
script = ExtResource("6_q5vxn")

[node name="Minimap" parent="UI/Main" index="1"]
texture = SubResource("ViewportTexture_0ce5t")

[node name="PlayerCounterTitle" type="Label" parent="UI/Main" index="5"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -116.0
offset_top = 8.0
offset_right = 116.0
offset_bottom = 42.0
grow_horizontal = 2
theme_type_variation = &"HeaderMedium"
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 6
text = "Осталось игроков: "

[node name="PlayerCounter" type="Label" parent="UI/Main" index="6"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -40.0
offset_top = 32.0
offset_right = 40.0
offset_bottom = 112.0
grow_horizontal = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 8
theme_override_font_sizes/font_size = 48
text = "2
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="GameEnd" type="Label" parent="UI/Main" index="7"]
self_modulate = Color(1, 0, 0, 0)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -400.0
offset_top = -220.0
offset_right = 400.0
offset_bottom = -100.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1e-05, 1e-05)
pivot_offset = Vector2(400, 60)
theme_override_colors/font_color = Color(1, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 0
theme_override_constants/shadow_offset_y = 3
theme_override_constants/outline_size = 4
theme_override_font_sizes/font_size = 40
text = "ПОРАЖЕНИЕ!"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="UI/Main/GameEnd" index="0"]
libraries = {
&"": SubResource("AnimationLibrary_n8n4b")
}

[node name="SpectatorMenu" type="HBoxContainer" parent="UI/Main" index="8"]
visible = false
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -227.5
offset_top = -136.0
offset_right = 227.5
offset_bottom = -80.0
grow_horizontal = 2
grow_vertical = 0

[node name="Previous" type="Button" parent="UI/Main/SpectatorMenu" index="0"]
layout_mode = 2
icon = ExtResource("7_oyafe")

[node name="Spectating" type="VBoxContainer" parent="UI/Main/SpectatorMenu" index="1"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="UI/Main/SpectatorMenu/Spectating" index="0"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 4
text = "Наблюдение за"
horizontal_alignment = 1
vertical_alignment = 1

[node name="SpectatingName" type="Label" parent="UI/Main/SpectatorMenu/Spectating" index="1"]
unique_name_in_owner = true
layout_mode = 2
theme_type_variation = &"HeaderSmall"
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 4
horizontal_alignment = 1
vertical_alignment = 1

[node name="Next" type="Button" parent="UI/Main/SpectatorMenu" index="2"]
layout_mode = 2
icon = ExtResource("8_ub7jk")

[node name="Title" parent="UI/Intro" index="1"]
text = "КОРОЛЕВСКАЯ БИТВА"

[node name="Description" parent="UI/Intro/Title" index="0"]
text = "Побеждает последний выживший!"

[node name="Text" parent="UI/Intro" index="2"]
text = "Каждый сам
за себя!"

[connection signal="local_player_created" from="." to="." method="_on_local_player_created"]
[connection signal="local_player_created" from="." to="UI" method="_on_local_player_created"]
[connection signal="timeout" from="HealBoxSpawnTimer" to="." method="_on_heal_box_spawn_timer_timeout"]
[connection signal="timeout" from="AmmoBoxSpawnTimer" to="." method="_on_ammo_box_spawn_timer_timeout"]
[connection signal="pressed" from="UI/Main/SpectatorMenu/Previous" to="UI" method="previous_player"]
[connection signal="pressed" from="UI/Main/SpectatorMenu/Next" to="UI" method="next_player"]
